More French translations (with corrections)

--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -77,7 +77,7 @@
     "SupportingCharacter.speciesAndAttributes": "Espèce et Attributs",
     "SupportingCharacter.speciesAndAttributesInstruction": "Assignez les scores d'Attributs et choisissez l'espèce du personnage. L'espèce choisie influera sur les valeurs finales des attributs.",
     "SupportingCharacter.disciplineInstruction": "Assignez les Disciplines de votre personnage. La plus haute valeur devrait corresponddre au département/rôle de votre personnage",
-    "SupportingCharacter.focusInstruction": "Choisissez trois Spécialités pour votre personnage. Au moins un devrait représenter le département rôle de votre personnage.",
+    "SupportingCharacter.focusInstruction": "Choisissez trois Spécialités pour votre personnage. Au moins un devrait représenter le département/rôle de votre personnage.",
     "SupportingCharacter.nameAndRank": "Nom & Rang",
     "SupportingCharacter.nameAndRankInstruction": "Donnez au personnage un nom et un grade approprié. Les personnages secondaires ne peuvent pas avoir un grade supérieur à Lieutenant et sont très sonvant du personnel enrôlé plutôt que des officiers.",
 
@@ -125,9 +125,9 @@
     "Construct.other.missionProfile": "Profil de mission",
     "Construct.other.name": "Nom",
     "Construct.other.pronouns": "Pronoms",
-    "Construct.other.power": "Puissance",
-    "Construct.other.purpose": "Energie",
-    "Construct.other.rank": "Rang",
+    "Construct.other.power": "Energie",
+    "Construct.other.purpose": "Rôle",
+    "Construct.other.rank": "Grade",
     "Construct.other.refits": "Mises à jour",
     "Construct.other.resistance": "Résistance",
     "Construct.other.reprimands": "Réprimandes",
@@ -264,7 +264,7 @@
     "GovernmentType.name.other": "Autre",
 
     "AlliedMilitaryType.name.maco": "MACO",
-    "AlliedMilitaryType.name.andorianImperialGuard": "Garde Impériale Romulienne ",
+    "AlliedMilitaryType.name.andorianImperialGuard": "Garde Impériale Andorienne ",
     "AlliedMilitaryType.name.vulcanHighCommand": "Haut Commandement Vulcain",
     "AlliedMilitaryType.name.klingonDefenceForce": "Forces de Défense Klingones",
     "AlliedMilitaryType.name.romulanStarEmpire": "Empire Stellaire Romulien",
