--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -39,6 +39,10 @@ CharacterTypePage.whatMilitary,What military does this character represent?,,,Qu
 CharacterTypePage.otherMilitaryName,What's the name of this military?,,,Quel est le nom de l'armée?
 ModificationTypeSelectionPage.instruction,Please select the modification that you want to apply to this character:,,,
 ModificationTypeSelectionPage.whatMilestoneType,What kind of milestone is being applied?,,,
+ReputationChangePage.instruction,Adjust the character's reputation as appropriate.,,,
+ModificationCompletePage.instruction,"The character has been modified. You can view the revised character, or make another modification.
+
+You might want to save the URL for the revised character.",,,
 SpeciesDetails.options,Species Options,Spezies Optionen,,Option d'espèce
 SpeciesDetails.selectThree,(Select three),(drei wählen),,(Choisir trois)
 SpeciesDetails.allowCrossSpecies,Allow cross-species talents (GM's decision),Spezis-übergreifende Talente erlauben (SL-Entscheid),,Autoriser les talents inter-espèces (Decision du GM)
@@ -188,7 +192,9 @@ Page.title.spaceframeSelection,Spaceframe,Schiffsklasse,,Modèle de Vaisseau
 Page.title.starshipTalentSelection,Starship Talents,Raumschiff Talente,,Talents de Vaisseau
 Page.title.starshipTypeSelection,Starship Type,Raumschiff-Typ,,Type de Vaisseau
 Page.title.starshipWeaponsSelection,Starship Weapons,Schiffswaffen,,Armes de Vaisseau
-Page.title.modificationTypeSelection,ModificationType,,,
+Page.title.modificationTypeSelection,Modification Type,,,
+Page.title.reputationChange,Reputation Change,,,
+Page.title.modificationComplete,Modification Completed,,,
 Page.breadcrumb.characterCreation,Character Creation,Charaktererstellung,Creación de personajes,Création de personnages
 Page.breadcrumb.starshipCreation,Starship Creation,Raumschifferstellung,,Règles de Base
 Page.breadcrumb.supportingCharacterCreation,Supporting Character Creation,,,Création de Personnage Secondaire
@@ -252,3 +258,6 @@ AlliedMilitaryType.name.other,Other,,,Autre
 ModificationType.name.reputation,Reputation,,,
 ModificationType.name.promotion,Promotion,,,
 ModificationType.name.milestone,Milestone,,,
+MilestoneType.name.normal,Normal Milestone,,,
+MilestoneType.name.spotlight,Spotlight Milestone,,,
+MilestoneType.name.arc,Arc Milestone,,,
