minor translation updates; - refactor the handling of PDF and screen display of world data

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -19,6 +19,7 @@
     "Home.talentsButton": "Talents Overview",
 
     "ViewPage.viewSupportingCharacter": "View Supporting Character",
+    "ViewPage.viewNpc": "View NPC",
     "ViewPage.viewMainCharacter": "View Main Character",
     "ViewPage.viewStarship": "View Starship",
     "ViewPage.errorMessage": "Things have gone terribly, terribly wrong. We might be in the mirror universe.",
